--- a/data/about.yaml
+++ b/data/about.yaml
@@ -1,13 +1,13 @@
 first_name: Michael
 last_name: Hemmelgarn
 city: Columbus, OH
-zipcode: 45362
+zipcode: 43201
 phone: (937) 621-2524
 email: 'Hemmelgarn.85@osu.edu'
 blurb: >
-  I am a Computer Science and Engineering Student at The Ohio State University.
-  <br>My current focus is in Web Development using Ruby on Rails and Angular.
-  <br>I strive to design and create amazing code and to be a great teammate.
+  I am a Computer Science and Engineering Student at The Ohio State University<br>
+  graduating in December 2019. My current focus is in Web Development using Ruby on Rails<br>
+  and Angular. I strive to design and create amazing code and to be a great teammate.
 
 social:
   -
